<resources>
    <!--activity_welcome-->
    <string name="app_name">Where Is My Stuff</string>
    <string name="welcome_welcome_text_view">Welcome!</string>
    <string name="welcome_login_button">Login</string>
    <string name="welcome_register_button">Register</string>

    <!--activity_register-->
    <string name="register_name_text_view">Full Name:</string>
    <string name="register_first_name_edit_text">First</string>
    <string name="register_last_name_edit_text">Last</string>
    <string name="register_email_text_view">Email:</string>
    <string name="register_username_text_view">Username:</string>
    <string name="register_password_text_view1">Password:</string>
    <string name="register_password_text_view2">Retype\nPassword:</string>
    <string name="register_register_button">Register</string>
    <string name="register_cancel_button">Cancel</string>
    <string name="register_account_text_view">Account Type:</string>
    <string name="register_admin_radio_button">Admin</string>
    <string name="register_user_radio_button">User</string>

    <!--activity_login-->
    <string name="login_username_email_text_view">Username or Email:</string>
    <string name="login_password_text_view">Password:</string>
    <string name="login_login_button">Login</string>
    <string name="login_cancel_button">Cancel</string>

    <!--activity_main-->
    <string name="main_text_view">Welcome to the App!</string>
    <string name="main_logout_button">Logout</string>
    <string name="main_enter_lost_item_button">Enter Lost Item</string>
    <string name="main_enter_found_item_button">Enter Found Item</string>
    <string name="main_search_item_button">Search Items</string>
    <string name="main_view_lost_items_button">View Lost Items</string>
    <string name="main_view_found_items_button">View Found Items</string>
    <string name="main_view_map_button">View Map</string>
    <string name="main_view_stats_button">View Stats</string>

    <!--activity_enter_lost_item-->
    <string name="enter_lost_item_title_text_view">Enter Your Lost Item!</string>
    <string name="enter_lost_item_type_text_view">Item Type:</string>
    <string name="enter_lost_item_description_text_view">Item Description:</string>
    <string name="enter_lost_item_button">Enter Item</string>
    <string name="enter_lost_item_name_text_view">Item Name</string>

    <!--activity_enter_found_item-->
    <string name="enter_found_item_title_text_view">Enter A Found
        Item!</string>
    <string name="enter_found_item_type_text_view">Item Type:</string>
    <string name="enter_found_item_description_text_view">Item Description
        :</string>
    <string name="enter_found_item_button">Enter Item</string>
    <string name="enter_found_item_name_text_view">Item Name:</string>

    <!--activity_view_lost_items-->
    <string name="view_lost_items_text_view">Lost Items:</string>
    <string name="view_lost_items_home_button">Home</string>

    <!--activity_view_found_items-->
    <string name="view_found_items_text_view">Found Items:</string>
    <string name="view_found_items_home_button">Home</string>


    <string name="title_activity_maps">Map</string>

    <!--activity_search-->
    <string name="search_item_type_text">Item Type:</string>
    <string name="search_lost_item_radio_button">Lost Item</string>
    <string name="search_found_item_radio_button">Found Item</string>
    <string name="search_item_name_text">Item Name:</string>
    <string name="search_search_button">Search</string>
    <string name="search_cancel_button">Cancel</string>

    <!--activity_search_result-->
    <string name="search_result_search_result_text">Search Result:</string>
    <string name="search_result_description_text">Description</string>

    <!--activity_map-->
    <string name="maps_text_view">Map</string>

    <!--activity_message-->
    <string name="message_title_text_view">Send Message!</string>
    <string name="message_send_button">Send</string>
    <string name="message_home_button">Home</string>
</resources>
