<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="cs2340.whereismystuff.controller.MainActivity">

    <Button
        android:id="@+id/mainLogoutButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/main_logout_button"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/mainTitleTextView"
        android:layout_alignEnd="@+id/mainTitleTextView"/>

    <TextView
        android:id="@+id/mainTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/main_text_view"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/mainLogoutButton"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/mainEnterLostItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mainTitleTextView"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/main_enter_lost_item_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainEnterFoundItemButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainEnterLostItemButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/main_enter_found_item_button"/>

    <Button
        android:id="@+id/mainSearchItemsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainEnterFoundItemButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/main_search_item_button"/>
</RelativeLayout>