<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs2340.whereismystuff.controller.RegisterActivity">

    <TextView
        android:id="@+id/registerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerUsernameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/registerUsernameTextView"
        android:layout_marginTop="16dp"
        android:text="@string/register_name_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/registerFirstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerNameTextView"
        android:layout_alignStart="@+id/registerNameTextView"
        android:layout_below="@+id/registerNameTextView"
        android:layout_toStartOf="@+id/registerLastNameEditText"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/register_first_name_edit_text"
        android:textSize="12sp"
        android:layout_toLeftOf="@+id/registerLastNameEditText" />

    <EditText
        android:id="@+id/registerLastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registerFirstNameEditText"
        android:layout_alignBottom="@+id/registerFirstNameEditText"
        android:layout_alignEnd="@+id/registerUsernameEditText"
        android:layout_alignRight="@+id/registerUsernameEditText"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toRightOf="@+id/registerNameTextView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/register_last_name_edit_text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/registerEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerFirstNameEditText"
        android:layout_alignStart="@+id/registerFirstNameEditText"
        android:layout_below="@+id/registerFirstNameEditText"
        android:layout_marginTop="17dp"
        android:text="@string/register_email_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerEmailTextView"
        android:layout_alignStart="@+id/registerEmailTextView"
        android:layout_below="@+id/registerEmailTextView"
        android:ems="10"
        android:inputType="textEmailAddress"/>/>

    <TextView
        android:id="@+id/registerUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerFirstNameEditText"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="106dp"
        android:text="@string/register_username_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/registerUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerUsernameTextView"
        android:layout_alignStart="@+id/registerUsernameTextView"
        android:layout_below="@+id/registerUsernameTextView"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/registerPasswordTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerUsernameEditText"
        android:layout_alignStart="@+id/registerUsernameEditText"
        android:layout_below="@+id/registerUsernameEditText"
        android:layout_marginTop="20dp"
        android:text="@string/register_password_text_view1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/registerPasswordEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/registerUsernameEditText"
        android:layout_alignRight="@+id/registerUsernameEditText"
        android:layout_below="@+id/registerPasswordTextView1"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registerPasswordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerPasswordEditText1"
        android:layout_alignStart="@+id/registerPasswordEditText1"
        android:layout_below="@+id/registerPasswordEditText1"
        android:layout_marginTop="22dp"
        android:text="@string/register_password_text_view2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/registerPasswordEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerPasswordTextView2"
        android:layout_alignStart="@+id/registerPasswordTextView2"
        android:layout_below="@+id/registerPasswordTextView2"
        android:ems="10"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="80dip"
        android:layout_marginTop="455dip"
        android:orientation="horizontal"
        android:weightSum="4"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/registerRegisterButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/registerCancelButton"
            android:layout_alignBottom="@+id/registerCancelButton"
            android:layout_alignLeft="@+id/registerPasswordEditText2"
            android:layout_alignStart="@+id/registerPasswordEditText2"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/register_register_button" />

        <Button
            android:id="@+id/registerCancelButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/registerCancelButton"
            android:layout_alignBottom="@+id/registerCancelButton"
            android:layout_alignLeft="@+id/registerPasswordEditText2"
            android:layout_alignStart="@+id/registerPasswordEditText2"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/register_cancel_button" />
    </LinearLayout>
    <!--<Button-->
        <!--android:id="@+id/registerRegisterButton"-->
        <!--style="@style/Widget.AppCompat.Button.Colored"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@+id/registerCancelButton"-->
        <!--android:layout_alignBottom="@+id/registerCancelButton"-->
        <!--android:layout_alignLeft="@+id/registerPasswordEditText2"-->
        <!--android:layout_alignStart="@+id/registerPasswordEditText2"-->
        <!--android:background="@android:color/holo_blue_dark"-->
        <!--android:text="Register" />-->

    <!--<Button-->
        <!--android:id="@+id/registerCancelButton"-->
        <!--style="@style/Widget.AppCompat.Button.Colored"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignEnd="@+id/registerPasswordEditText2"-->
        <!--android:layout_alignRight="@+id/registerPasswordEditText2"-->
        <!--android:layout_below="@+id/registerPasswordEditText2"-->
        <!--android:layout_marginTop="13dp"-->
        <!--android:backgroundTint="@android:color/holo_blue_dark"-->
        <!--android:text="Cancel" />-->

</RelativeLayout>
