<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="cs2340.whereismystuff.controller.EnterLostItemActivity">

    <TextView
        android:id="@+id/enterLostItemTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/enter_lost_item_title_text_view"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/enterLostItemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterLostItemTypeSpinner"
        android:layout_alignLeft="@+id/enterLostItemTypeTextView"
        android:layout_alignStart="@+id/enterLostItemTypeTextView"
        android:layout_marginBottom="47dp"
        android:text="@string/enter_lost_item_name_text_view"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/enterLostItemNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterLostItemNameTextView"
        android:layout_alignBottom="@+id/enterLostItemNameTextView"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/enterLostItemNameTextView"
        android:layout_toRightOf="@+id/enterLostItemNameTextView"
        android:ems="10"
        android:inputType="textPersonName">

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/enterLostItemTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enterLostItemTitleTextView"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:text="@string/enter_lost_item_type_text_view"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/enterLostItemTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/enterLostItemTypeTextView"
        android:layout_toEndOf="@+id/enterLostItemTypeTextView"
        android:layout_toRightOf="@+id/enterLostItemTypeTextView"/>

    <TextView
        android:id="@+id/enterLostItemDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterLostItemTypeTextView"
        android:layout_alignStart="@+id/enterLostItemTypeTextView"
        android:layout_below="@+id/enterLostItemTypeTextView"
        android:layout_marginTop="65dp"
        android:text="@string/enter_lost_item_description_text_view"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterLostItemDescriptionEditText"
        android:backgroundTintMode="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/enterLostItemTitleTextView"
        android:layout_alignLeft="@+id/enterLostItemDescriptionTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/enterLostItemTitleTextView"
        android:layout_alignStart="@+id/enterLostItemDescriptionTextView"
        android:layout_below="@+id/enterLostItemDescriptionTextView"
        android:layout_marginBottom="93dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top|left"/>

    <Button
        android:id="@+id/enterLostItemEnterItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterLostItemDescriptionEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/enterLostItemDescriptionEditText"
        android:layout_marginBottom="23dp"
        android:background="@color/buttonColor"
        android:text="@string/enter_lost_item_button"/>


</RelativeLayout>
