<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs2340.whereismystuff.controller.LoginActivity">

    <TextView
        android:id="@+id/loginUsernameEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="73dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="108dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login_username_email_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/loginUsernameEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUsernameEmailTextView"
        android:layout_alignStart="@+id/loginUsernameEmailTextView"
        android:layout_below="@+id/loginUsernameEmailTextView"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/loginPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginPasswordEditText"
        android:layout_alignStart="@+id/loginPasswordEditText"
        android:layout_centerVertical="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login_password_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUsernameEmailEditText"
        android:layout_alignStart="@+id/loginUsernameEmailEditText"
        android:layout_below="@+id/loginPasswordTextView"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginLoginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginCancelButton"
        android:layout_alignBottom="@+id/loginCancelButton"
        android:layout_alignLeft="@+id/loginPasswordEditText"
        android:layout_alignStart="@+id/loginPasswordEditText"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login_login_button" />

    <Button
        android:id="@+id/loginCancelButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginPasswordEditText"
        android:layout_alignRight="@+id/loginPasswordEditText"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_marginTop="56dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login_cancel_button" />
</RelativeLayout>
